fixing a type spacing

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ hr {
   display: block;
   top: auto;
   text-align: center;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 .em-header,
 .sub-header em {
